apollo-router/src/query_planner/snapshots/apollo_router__query_planner__query_planner_service__tests__subselections-14.snap
---
source: apollo-router/src/query_planner/bridge_query_planner.rs
expression: "subselections_keys(r#\"query Q($d1:Boolean!) { me {\n            username\n            name {\n                first\n                ... @defer(if: $d1, label: \"A\") { last }\n            }\n        }}\"#).await"
---
None 1 query{ me { username name { first } } }
Some("A") 1 query{ me { name { last } } }
